--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -194,9 +194,9 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+#bar {
+#        status_command i3status
+#}
 
 # Hibernate System
 bindsym $mod+Shift+x exec systemctl hibernate
@@ -204,6 +204,8 @@ bindsym $mod+Shift+x exec systemctl hibernate
 # Connect To Buds
 bindsym $mod+Shift+b exec btconnect "realme Buds T300"
 
+# compositor
+exec_always --no-startup-id picom -f
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +10%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
@@ -217,6 +219,8 @@ bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-# wallpaper
-exec_always --no-startup-id /home/soulninja/.fehbg
+# Wallpaper
+exec_always --no-startup-id feh --bg-scale --randomize ~/.local/bin/backgrounds/*
 
+# polybar yay
+exec_always --no-startup-id /home/skyash/.config/polybar/launch.sh  --forest
