--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -6,7 +6,7 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Fira Code 9
+font pango:UbuntuMono Nerd Font 11
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -120,16 +120,18 @@ bindsym $mod+x exec --no-startup-id dm-tool lock
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
+
+set $ws1 "1: "           # Browser
+set $ws2 "2: "           # Misc
+set $ws3 "3: "           # Terminal/Editor
+set $ws4 "4: "           # Code
+set $ws5 "5: "           # Discord
+set $ws6 "6: "           # Obsidian
+set $ws7 "7: "           # Music
+set $ws8 "8: "           # Games
+set $ws9 "9: "
+set $ws10 "10: "
+
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
@@ -204,6 +206,9 @@ bindsym $mod+Shift+x exec systemctl hibernate
 # Connect To Buds
 bindsym $mod+Shift+b exec btconnect "realme Buds T300"
 
+# Connect To Wifi
+bindsym $mod+Shift+w exec nmcli dev wifi connect "realme 10 Pro 5G"
+
 # compositor
 exec_always --no-startup-id picom -f
 # Sreen brightness controls
@@ -224,3 +229,16 @@ exec_always --no-startup-id feh --bg-scale --randomize ~/.local/bin/backgrounds/
 
 # polybar yay
 exec_always --no-startup-id /home/skyash/.config/polybar/launch.sh  --forest
+
+# Auto-start apps into specific workspaces
+exec --no-startup-id i3-msg "workspace $ws1; exec brave"
+exec --no-startup-id i3-msg "workspace $ws3; exec alacritty"
+exec --no-startup-id i3-msg "workspace $ws5; exec discord"
+exec --no-startup-id i3-msg 'workspace $ws5; exec brave "https://x.com" "https://reddit.com"'
+exec --no-startup-id i3-msg "workspace $ws5; exec telegram-desktop"
+exec --no-startup-id i3-msg "workspace $ws6; exec obsidian"
+exec --no-startup-id i3-msg 'workspace $ws6; exec brave "https://www.notion.so/"'
+exec --no-startup-id i3-msg "workspace $ws7; exec youtube-music"
+
+# Connect To Buds on Startup
+exec --no-startup-id btconnect "realme Buds T300"
