--- a/polybar/.config/polybar/forest/config.ini
+++ b/polybar/.config/polybar/forest/config.ini
@@ -2,7 +2,7 @@
 ;; │░█▀█░█▀█░█░░░█░█░█▀▄░█▀█░█▀▄░░░░░░░░░█▀▀░█▀█░█▀█░█▀▀░▀█▀░█▀▀│
 ;; │░█▀▀░█░█░█░░░░█░░█▀▄░█▀█░█▀▄░░░░▀░░░░█░░░█░█░█░█░█▀▀░░█░░█░█│
 ;; │░▀░░░▀▀▀░▀▀▀░░▀░░▀▀░░▀░▀░▀░▀░░░░▀░░░░▀▀▀░▀▀▀░▀░▀░▀░░░▀▀▀░▀▀▀│
-;; │░Created░By░Aditya░Shakya░&░customized░by░SoulNinja░░░░░░░░░│
+;; │░Customized by skyash!░░░░░░░░░│
 ;; └────────────────────────────────────────────────────────────┘
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
