--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -121,16 +121,16 @@ bindsym $mod+x exec --no-startup-id dm-tool lock
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 
-set $ws1 "1: "           # Browser
-set $ws2 "2: "           # Misc
-set $ws3 "3: "           # Terminal/Editor
-set $ws4 "4: "           # Code
-set $ws5 "5: "           # Discord
-set $ws6 "6: "           # Obsidian
-set $ws7 "7: "           # Music
-set $ws8 "8: "           # Games
-set $ws9 "9: "
-set $ws10 "10: "
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10"
 
 
 # switch to workspace
