--- a/polybar/.config/polybar/forest/modules.ini
+++ b/polybar/.config/polybar/forest/modules.ini
@@ -515,16 +515,16 @@ wrapping-scroll = false
 
 ; ws-icon-[0-9]+ = label;icon
 ; NOTE: The label needs to match the name of the i3 workspace
-ws-icon-0 = 1;I
-ws-icon-1 = 2;II
-ws-icon-2 = 3;III
-ws-icon-3 = 4;IV
-ws-icon-4 = 5;V
-ws-icon-5 = 6;VI
-ws-icon-6 = 7;VII
-ws-icon-7 = 8;VIII
-ws-icon-8 = 9;IX
-ws-icon-9 = 0;X
+ws-icon-0 = 1;BROWSE 
+ws-icon-1 = 2;MISC 
+ws-icon-2 = 3;EDITOR 
+ws-icon-3 = 4;CODE 
+ws-icon-4 = 5;SOCIAL 
+ws-icon-5 = 6;OBSIDIAN 
+ws-icon-6 = 7;MUSIC 
+ws-icon-7 = 8;GAMING 
+ws-icon-8 = 9;MISC 
+ws-icon-9 = 0;SETTINGS 
 ws-icon-default = X
 ; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
 ; you must also define a ws-icon-5.
