--- a/polybar/.config/polybar/forest/modules.ini
+++ b/polybar/.config/polybar/forest/modules.ini
@@ -515,16 +515,16 @@ wrapping-scroll = false
 
 ; ws-icon-[0-9]+ = label;icon
 ; NOTE: The label needs to match the name of the i3 workspace
-ws-icon-0 = 1;BROWSE 
-ws-icon-1 = 2;MISC 
-ws-icon-2 = 3;EDITOR 
-ws-icon-3 = 4;CODE 
-ws-icon-4 = 5;SOCIAL 
-ws-icon-5 = 6;OBSIDIAN 
-ws-icon-6 = 7;MUSIC 
-ws-icon-7 = 8;GAMING 
-ws-icon-8 = 9;MISC 
-ws-icon-9 = 0;SETTINGS 
+ws-icon-0 = 1;1:
+ws-icon-1 = 2;2:
+ws-icon-2 = 3;3:
+ws-icon-3 = 4;4:
+ws-icon-4 = 5;5:
+ws-icon-5 = 6;6:
+ws-icon-6 = 7;7:
+ws-icon-7 = 8;8:
+ws-icon-8 = 9;9:
+ws-icon-9 = 0;10:SETTINGS 
 ws-icon-default = X
 ; NOTE: You cannot skip icons, e.g. to get a ws-icon-6
 ; you must also define a ws-icon-5.
