--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -45,7 +45,7 @@ tiling_drag modifier titlebar
 bindsym $mod+Return exec --no-startup-id alacritty
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+Ctrl+q kill
 
 # start dmenu (a program launcher)
 #bindsym $mod+d exec --no-startup-id dmenu_run
@@ -72,16 +72,16 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
-bindsym $mod+Shift+h move left
+bindsym $mod+Ctrl+j move down
+bindsym $mod+Ctrl+k move up
+bindsym $mod+Ctrl+l move right
+bindsym $mod+Ctrl+h move left
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+bindsym $mod+Ctrl+Left move left
+bindsym $mod+Ctrl+Down move down
+bindsym $mod+Ctrl+Up move up
+bindsym $mod+Ctrl+Right move right
 
 # split in horizontal orientation
 bindsym $mod+n split h
@@ -98,7 +98,7 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+Ctrl+space floating toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
@@ -146,26 +146,26 @@ bindsym $mod+9 workspace number $ws9
 bindsym $mod+0 workspace number $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+bindsym $mod+Ctrl+1 move container to workspace number $ws1
+bindsym $mod+Ctrl+2 move container to workspace number $ws2
+bindsym $mod+Ctrl+3 move container to workspace number $ws3
+bindsym $mod+Ctrl+4 move container to workspace number $ws4
+bindsym $mod+Ctrl+5 move container to workspace number $ws5
+bindsym $mod+Ctrl+6 move container to workspace number $ws6
+bindsym $mod+Ctrl+7 move container to workspace number $ws7
+bindsym $mod+Ctrl+8 move container to workspace number $ws8
+bindsym $mod+Ctrl+9 move container to workspace number $ws9
+bindsym $mod+Ctrl+0 move container to workspace number $ws10
 
 # screenshot
-bindsym $mod+Shift+s exec --no-startup-id flameshot gui
+bindsym $mod+Ctrl+s exec --no-startup-id flameshot gui
 
 # reload the configuration file
-bindsym $mod+Shift+c reload
+bindsym $mod+Ctrl+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
+bindsym $mod+Ctrl+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Ctrl+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -201,13 +201,13 @@ bindsym $mod+r mode "resize"
 #}
 
 # Hibernate System
-bindsym $mod+Shift+x exec systemctl hibernate
+bindsym $mod+Ctrl+x exec systemctl hibernate
 
 # Connect To Buds
-bindsym $mod+Shift+b exec btconnect "realme Buds T300"
+bindsym $mod+Ctrl+b exec btconnect "realme Buds T300"
 
 # Connect To Wifi
-bindsym $mod+Shift+w exec nmcli dev wifi connect "realme 10 Pro 5G"
+bindsym $mod+Ctrl+w exec nmcli dev wifi connect "realme 10 Pro 5G"
 
 # compositor
 exec_always --no-startup-id picom -f
@@ -241,7 +241,6 @@ assign [class="discord"] $ws5
 assign [class="TelegramDesktop"] $ws5
 assign [class="obsidian"] $ws6
 assign [class="ticktick"] $ws7
-assign [class="com.github.th_ch.youtube_music"] $ws8
 
 # Auto-start apps into specific workspaces
 exec --no-startup-id i3-msg "workspace number $ws1; exec brave"
@@ -252,6 +251,5 @@ exec --no-startup-id i3-msg 'workspace number $ws5; exec brave "https://x.com" "
 exec --no-startup-id i3-msg "workspace number $ws5; exec telegram-desktop"
 exec --no-startup-id i3-msg "workspace number $ws6; exec obsidian"
 exec --no-startup-id i3-msg "workspace number $ws7; exec ticktick"
-exec --no-startup-id i3-msg "workspace number $ws8; exec youtube-music"
 
 exec --no-startup-id i3-msg "workspace $ws1"
