--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -46,6 +46,7 @@ $browser = firefox
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
+exec-once = waybar
 exec-once = $terminal
 exec-once = $browser
 exec-once = telegram-desktop
@@ -208,7 +209,7 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
     }
 }
 
@@ -241,15 +242,15 @@ bind = $mainMod, B, exec, $browser
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, A, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod CTRL, P, exec, flameshot gui
+bind = $mainMod CTRL, T, togglesplit, # dwindle
+bind = $mainMod CTRL, P, exec, grimblast copy area
 
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, l, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, j, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
