--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -37,13 +37,17 @@
         "warp-on-scroll": false,
         "format": "{name}: {icon}",
         "format-icons": {
-            "1": "",
-            "2": "",
-            "3": "",
-            "4": "",
-            "5": "",
+            "1": "",
+            "2": "",
+            "3": "",
+            "4": "",
+            "5": "",
+	    "6": "",
+	    "7": "",
+	    "8": "",
+	    "9": "",
             "urgent": "",
-            "focused": "",
+            "active": "",
             "default": ""
         }
     },
