--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -244,7 +244,7 @@ bind = $mainMod, A, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod CTRL, T, togglesplit, # dwindle
 bind = $mainMod CTRL, P, exec, grimblast copy area
-
+bind = $mainMod, X, exec, hyprlock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
