--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -46,7 +46,8 @@ $browser = firefox
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = waybar
+exec-once = waybar & hypridle & swww-daemon
+exec-once = swww img "$(find ~/.local/bin/backgrounds/ -type f | shuf -n 1)"
 exec-once = $terminal
 exec-once = $browser
 exec-once = telegram-desktop
